Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBooleanNumberWrapped.quorum
class main
    action main
        number n = 7.5
        boolean b = n
    end
end